fix margin for project img on mobile

--- a/style.css
+++ b/style.css
@@ -115,4 +115,8 @@ a {
         padding: 4px;
         font-size: 18px;
     }
+    #projects img {
+        margin: 13% 0;
+        /* background-color: rgb(250, 250, 250); */
+    }
 }
